<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_remove">Remove</string>
    <string name="description_post_save">Save</string>
    <string name="description_cancel_edit">Cancel Edit</string>
    <string name="post_text">Post Text</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="edit_message">Edit message</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="liked_count">0</string>
    <string name="share_count">0</string>
    <string name="views_count">0</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="add_post">Add post</string>
    <string name="video_Poster">Add post</string>
    <string name="play">Add post</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s published new post:</string>
    <string name="notification_default">New notification from NMedia</string>
</resources>